# PackPilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CNAME  index.html  script.js  styles.css
docs/assets/: .gitkeep
profiles/examples/: creative-setup.json  dev-setup.json  gaming-setup.json  linux-power-user.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/package_manager/: mod.rs
src-tauri/src/package_manager/linux/: apt.rs  dnf.rs  flatpak.rs  mod.rs  snap.rs
src-tauri/src/package_manager/macos/: homebrew.rs
src-tauri/src/package_manager/windows/: chocolatey.rs  mod.rs  winget.rs
src/components/: AppCard.tsx  AppDetailModal.tsx  InstallQueue.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SkeletonCard.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts
src/stores/: appStore.ts
src/types/: index.ts
