[package]
name = "packpilot"
version = "0.1.0"
description = "Cross-platform app installer with a beautiful GUI"
authors = ["Kobeep"]
edition = "2021"

[lib]
name = "packpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
